[gd_scene load_steps=28 format=3 uid="uid://qhqvu18ysax1"]

[ext_resource type="Script" uid="uid://bqxvdb3ixgxfq" path="res://mision5/Kruskal/Script/principal.gd" id="1_4muxu"]
[ext_resource type="Texture2D" uid="uid://do1j1l8ban2b0" path="res://mision5/images/Sabaody.jpeg" id="2_4muxu"]
[ext_resource type="Script" uid="uid://b8vgjrefc4sto" path="res://mision5/Kruskal/Script/v.gd" id="3_wqmh6"]
[ext_resource type="Texture2D" uid="uid://cfdvd3ikpee57" path="res://mision5/images/bloq3.png" id="4_5q5ik"]
[ext_resource type="Texture2D" uid="uid://bd0wfs1ln3jk0" path="res://mision5/images/bloq2.png" id="5_2u51j"]
[ext_resource type="Texture2D" uid="uid://b6bsd3q6g71qe" path="res://mision5/images/bloq1.png" id="6_bxspu"]
[ext_resource type="Texture2D" uid="uid://dh671vpkorte4" path="res://mision5/images/bloq4.png" id="7_4muxu"]
[ext_resource type="PackedScene" uid="uid://c6srabino2ft4" path="res://mision5/linea.tscn" id="8_740fg"]
[ext_resource type="Script" uid="uid://4f7shekcf7me" path="res://mision5/Kruskal/Script/linea.gd" id="9_8t0cc"]
[ext_resource type="Texture2D" uid="uid://b81ssm41o4qtu" path="res://mision5/images/Normal.png" id="10_jihju"]
[ext_resource type="Texture2D" uid="uid://ydtkqo2dkc0c" path="res://mision5/Kruskal/images/blue Rectangle.png" id="11_vtirg"]
[ext_resource type="Texture2D" uid="uid://bmyfl0c21snel" path="res://mision5/Kruskal/images/byte copy.png" id="12_yda7b"]
[ext_resource type="Texture2D" uid="uid://3cjarfhj8ucm" path="res://mision5/Kruskal/images/ChatGPT Image Nov 12, 2025, 11_34_16 AM copy.png" id="13_pvjda"]
[ext_resource type="Texture2D" uid="uid://bk3g3jc2qjwi0" path="res://mision5/Kruskal/images/ChatGPT Image Nov 12, 2025, 08_09_21 PM copy.png" id="14_e4ee7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bbpra"]
size = Vector2(27.874016, 149.64923)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rj1i6"]
size = Vector2(32.569366, 112.384445)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3anww"]
size = Vector2(30.85802, 192.70723)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hjjyp"]
size = Vector2(33.113445, 135.60153)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wqpb3"]
size = Vector2(36.892487, 237.47147)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d723d"]
size = Vector2(32.388687, 214.40407)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_chcqv"]
size = Vector2(33.472748, 151.38074)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qx36e"]
size = Vector2(39.933487, 168.19359)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_506ss"]
size = Vector2(34.71158, 319.49054)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7cj5m"]
size = Vector2(36.009766, 327.3959)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_meajn"]
size = Vector2(30.432465, 169.57547)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4muxu"]
size = Vector2(111.84832, 105.30267)

[sub_resource type="CircleShape2D" id="CircleShape2D_cryqx"]
radius = 30.737131

[node name="PrincipalImaginary" type="Node2D"]
script = ExtResource("1_4muxu")

[node name="Floor" type="Sprite2D" parent="."]
light_mask = 2
position = Vector2(594.5, 349.49997)
scale = Vector2(1.8872283, 2.1328502)
texture = ExtResource("2_4muxu")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.5310511, 0.53105116, 0.5310509, 1)

[node name="Aristas" type="Node2D" parent="."]
position = Vector2(52, -60)
rotation = 0.09378453
scale = Vector2(1.0416783, 1.0208744)

[node name="linea" parent="Aristas" instance=ExtResource("8_740fg")]
position = Vector2(9.647604, 0.057924867)
nodo_a_idx = 0
nodo_b_idx = 2
origen = "0"
destino = "2"

[node name="linea2" parent="Aristas" instance=ExtResource("8_740fg")]
position = Vector2(120, -218.00002)
rotation = 0.08649896
nodo_a_idx = 1
nodo_b_idx = 3
origen = "1"
destino = "3"

[node name="Linea3" type="Area2D" parent="Aristas"]
position = Vector2(-0.089900225, -0.9752478)
script = ExtResource("9_8t0cc")
nodo_a_idx = 0
nodo_b_idx = 1
origen = "0"
destino = "1"

[node name="Linea" type="Sprite2D" parent="Aristas/Linea3"]
position = Vector2(176.5724, 442.05304)
rotation = -1.1857438
scale = Vector2(0.13006252, 0.07724626)
texture = ExtResource("10_jihju")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Aristas/Linea3"]
position = Vector2(175.37416, 446.03003)
rotation = 0.35747877
scale = Vector2(0.99999994, 0.99999994)
shape = SubResource("RectangleShape2D_bbpra")

[node name="Label" type="Label" parent="Aristas/Linea3"]
offset_left = 158.61104
offset_top = 423.58572
offset_right = 198.61104
offset_bottom = 446.58572

[node name="Linea4" type="Area2D" parent="Aristas"]
script = ExtResource("9_8t0cc")
nodo_a_idx = 2
nodo_b_idx = 3
origen = "2"
destino = "3"

[node name="Linea" type="Sprite2D" parent="Aristas/Linea4"]
position = Vector2(418.39612, 480.314)
rotation = -1.2230033
scale = Vector2(0.105956815, 0.09131813)
texture = ExtResource("10_jihju")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Aristas/Linea4"]
position = Vector2(423.10355, 470.1696)
rotation = 0.35819235
shape = SubResource("RectangleShape2D_rj1i6")

[node name="Label" type="Label" parent="Aristas/Linea4"]
offset_left = 396.29044
offset_top = 470.6291
offset_right = 436.29044
offset_bottom = 493.6291

[node name="Linea5" type="Area2D" parent="Aristas"]
position = Vector2(-1, 0)
script = ExtResource("9_8t0cc")
nodo_a_idx = 1
nodo_b_idx = 4
origen = "1"
destino = "4"

[node name="Linea" type="Sprite2D" parent="Aristas/Linea5"]
position = Vector2(316.64594, 275.69067)
rotation = -0.53782344
scale = Vector2(0.15422693, 0.09135945)
texture = ExtResource("10_jihju")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Aristas/Linea5"]
position = Vector2(310.46667, 280.61047)
rotation = 1.033832
scale = Vector2(1, 0.9999999)
shape = SubResource("RectangleShape2D_3anww")

[node name="Label" type="Label" parent="Aristas/Linea5"]
offset_left = 283.93677
offset_top = 266.03958
offset_right = 323.93677
offset_bottom = 289.03958

[node name="Linea6" type="Area2D" parent="Aristas"]
script = ExtResource("9_8t0cc")
nodo_a_idx = 3
nodo_b_idx = 4
origen = "3"
destino = "4"

[node name="Linea" type="Sprite2D" parent="Aristas/Linea6"]
position = Vector2(428.3516, 295.82034)
rotation = 1.3487035
scale = Vector2(0.105681956, 0.094840884)
texture = ExtResource("10_jihju")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Aristas/Linea6"]
position = Vector2(425.63855, 297.68466)
rotation = -0.17897603
shape = SubResource("RectangleShape2D_hjjyp")

[node name="Label" type="Label" parent="Aristas/Linea6"]
offset_left = 411.0
offset_top = 282.0
offset_right = 451.0
offset_bottom = 305.0

[node name="Linea7" type="Area2D" parent="Aristas"]
script = ExtResource("9_8t0cc")
nodo_a_idx = 2
nodo_b_idx = 7
origen = "2"
destino = "7"

[node name="Linea" type="Sprite2D" parent="Aristas/Linea7"]
position = Vector2(531.5498, 535.7987)
rotation = -0.34735084
scale = Vector2(0.21357371, 0.1029072)
texture = ExtResource("10_jihju")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Aristas/Linea7"]
position = Vector2(530.1775, 537.2869)
rotation = 1.2110014
shape = SubResource("RectangleShape2D_wqpb3")

[node name="Label" type="Label" parent="Aristas/Linea7"]
offset_left = 512.0
offset_top = 501.0
offset_right = 552.0
offset_bottom = 524.0

[node name="Linea8" type="Area2D" parent="Aristas"]
script = ExtResource("9_8t0cc")
nodo_a_idx = 7
nodo_b_idx = 8
origen = "7"
destino = "8"

[node name="Linea" type="Sprite2D" parent="Aristas/Linea8"]
position = Vector2(801.66077, 420.46313)
rotation = -0.5322279
scale = Vector2(0.18127759, 0.1015009)
texture = ExtResource("10_jihju")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Aristas/Linea8"]
position = Vector2(796.3808, 423.46805)
rotation = 1.0501398
shape = SubResource("RectangleShape2D_d723d")

[node name="Label" type="Label" parent="Aristas/Linea8"]
offset_left = 776.0
offset_top = 387.0
offset_right = 816.0
offset_bottom = 410.0

[node name="Linea9" type="Area2D" parent="Aristas"]
script = ExtResource("9_8t0cc")
nodo_a_idx = 3
nodo_b_idx = 5
origen = "3"
destino = "5"

[node name="Linea" type="Sprite2D" parent="Aristas/Linea9"]
position = Vector2(537.4779, 330.7052)
rotation = -0.6935519
scale = Vector2(0.12337843, 0.09454193)
texture = ExtResource("10_jihju")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Aristas/Linea9"]
position = Vector2(537.7361, 331.05948)
rotation = 0.8635602
scale = Vector2(0.99999994, 1)
shape = SubResource("RectangleShape2D_chcqv")

[node name="Label" type="Label" parent="Aristas/Linea9"]
offset_left = 513.0
offset_top = 314.0
offset_right = 553.0
offset_bottom = 337.0

[node name="Linea10" type="Area2D" parent="Aristas"]
script = ExtResource("9_8t0cc")
nodo_a_idx = 5
nodo_b_idx = 6
origen = "5"
destino = "6"

[node name="Linea" type="Sprite2D" parent="Aristas/Linea10"]
position = Vector2(703.31683, 198.32318)
rotation = -0.69355196
scale = Vector2(0.15633255, 0.10827796)
texture = ExtResource("10_jihju")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Aristas/Linea10"]
position = Vector2(694.7816, 206.27393)
rotation = 0.87694556
shape = SubResource("RectangleShape2D_qx36e")

[node name="Label" type="Label" parent="Aristas/Linea10"]
offset_left = 684.0
offset_top = 161.0
offset_right = 724.0
offset_bottom = 184.0

[node name="Linea11" type="Area2D" parent="Aristas"]
script = ExtResource("9_8t0cc")
nodo_a_idx = 7
nodo_b_idx = 8
origen = "7"
destino = "6"

[node name="Linea" type="Sprite2D" parent="Aristas/Linea11"]
position = Vector2(728.55774, 299.02863)
rotation = -1.2714297
scale = Vector2(0.30171, 0.11254092)
texture = ExtResource("10_jihju")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Aristas/Linea11"]
position = Vector2(727.6918, 300.09552)
rotation = 0.29497197
scale = Vector2(0.9999994, 0.9999995)
shape = SubResource("RectangleShape2D_506ss")

[node name="Label" type="Label" parent="Aristas/Linea11"]
offset_left = 710.0
offset_top = 265.0
offset_right = 750.0
offset_bottom = 288.0

[node name="Linea12" type="Area2D" parent="Aristas"]
script = ExtResource("9_8t0cc")
nodo_a_idx = 4
nodo_b_idx = 6
origen = "4"
destino = "6"

[node name="Linea" type="Sprite2D" parent="Aristas/Linea12"]
position = Vector2(619.2161, 147.05019)
rotation = -0.21138886
scale = Vector2(0.29071844, 0.11596793)
texture = ExtResource("10_jihju")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Aristas/Linea12"]
position = Vector2(591.8167, 154.61842)
rotation = 1.3664454
scale = Vector2(0.9999999, 0.9999998)
shape = SubResource("RectangleShape2D_7cj5m")

[node name="Label" type="Label" parent="Aristas/Linea12"]
offset_left = 578.0
offset_top = 125.0
offset_right = 618.0
offset_bottom = 148.0

[node name="Linea13" type="Area2D" parent="Aristas"]
script = ExtResource("9_8t0cc")
nodo_a_idx = 8
nodo_b_idx = 6
origen = "8"
destino = "6"

[node name="Linea" type="Sprite2D" parent="Aristas/Linea13"]
position = Vector2(853.6715, 228.17023)
rotation = 1.1718805
scale = Vector2(0.17935325, 0.10958085)
texture = ExtResource("10_jihju")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Aristas/Linea13"]
position = Vector2(846.66144, 209.96709)
rotation = -0.3786044
shape = SubResource("RectangleShape2D_meajn")

[node name="Label" type="Label" parent="Aristas/Linea13"]
offset_left = 837.0
offset_top = 197.0
offset_right = 877.0
offset_bottom = 220.0

[node name="Nodos" type="Node2D" parent="."]
position = Vector2(52, -60)
rotation = 0.09378453
scale = Vector2(1.0416783, 1.0208744)

[node name="v1" type="Area2D" parent="Nodos" groups=["inicio"]]
script = ExtResource("3_wqmh6")

[node name="Red" type="Sprite2D" parent="Nodos/v1"]
position = Vector2(134.94226, 535.7435)
rotation = -0.09045951
scale = Vector2(0.17573866, 0.1563388)
texture = ExtResource("4_5q5ik")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Nodos/v1"]
position = Vector2(139.51727, 527.3845)
scale = Vector2(1, 0.9999999)
shape = SubResource("RectangleShape2D_4muxu")

[node name="v2" type="Area2D" parent="Nodos"]
script = ExtResource("3_wqmh6")
id_nodo = 1

[node name="Red" type="Sprite2D" parent="Nodos/v2"]
position = Vector2(203.20096, 311.07968)
rotation = -0.110181056
scale = Vector2(0.19402525, 0.14542912)
texture = ExtResource("5_2u51j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Nodos/v2"]
position = Vector2(-100.97064, 348.1443)
shape = SubResource("CircleShape2D_cryqx")

[node name="v3" type="Area2D" parent="Nodos"]
script = ExtResource("3_wqmh6")
id_nodo = 2

[node name="Red" type="Sprite2D" parent="Nodos/v3"]
position = Vector2(384.8715, 557.5019)
rotation = -0.07623516
scale = Vector2(0.13079406, 0.10789192)
texture = ExtResource("6_bxspu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Nodos/v3"]
position = Vector2(340.58157, 755.3967)
shape = SubResource("CircleShape2D_cryqx")

[node name="v4" type="Area2D" parent="Nodos"]
script = ExtResource("3_wqmh6")
id_nodo = 3

[node name="Red" type="Sprite2D" parent="Nodos/v4"]
position = Vector2(443.89188, 392.06433)
rotation = -0.08163378
scale = Vector2(0.16428505, 0.13243033)
texture = ExtResource("4_5q5ik")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Nodos/v4"]
position = Vector2(-150.3349, 178.73605)
shape = SubResource("CircleShape2D_cryqx")

[node name="v5" type="Area2D" parent="Nodos"]
script = ExtResource("3_wqmh6")
id_nodo = 4

[node name="Red" type="Sprite2D" parent="Nodos/v5"]
position = Vector2(403.31174, 180.69562)
rotation = -0.118797906
scale = Vector2(0.12932733, 0.13232355)
texture = ExtResource("6_bxspu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Nodos/v5"]
position = Vector2(-114.62599, 231.38976)
shape = SubResource("CircleShape2D_cryqx")

[node name="v6" type="Area2D" parent="Nodos"]
script = ExtResource("3_wqmh6")
id_nodo = 5

[node name="Red" type="Sprite2D" parent="Nodos/v6"]
position = Vector2(598.2511, 234.79271)
rotation = -0.12686384
scale = Vector2(0.19249718, 0.14948708)
texture = ExtResource("5_2u51j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Nodos/v6"]
position = Vector2(221.94684, -123.625015)
shape = SubResource("CircleShape2D_cryqx")

[node name="v7" type="Area2D" parent="Nodos"]
script = ExtResource("3_wqmh6")
id_nodo = 6

[node name="Red" type="Sprite2D" parent="Nodos/v7"]
position = Vector2(794.3496, 71.34193)
rotation = -0.081894115
scale = Vector2(0.19934748, 0.16667956)
texture = ExtResource("7_4muxu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Nodos/v7"]
position = Vector2(608.7123, -38.745018)
shape = SubResource("CircleShape2D_cryqx")

[node name="v8" type="Area2D" parent="Nodos"]
script = ExtResource("3_wqmh6")
id_nodo = 7

[node name="Red" type="Sprite2D" parent="Nodos/v8"]
position = Vector2(683.2655, 471.3918)
rotation = -0.09794231
scale = Vector2(0.17197454, 0.14035995)
texture = ExtResource("4_5q5ik")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Nodos/v8"]
position = Vector2(639.6147, 714.88983)
shape = SubResource("CircleShape2D_cryqx")

[node name="v9" type="Area2D" parent="Nodos"]
script = ExtResource("3_wqmh6")
id_nodo = 8

[node name="Red" type="Sprite2D" parent="Nodos/v9"]
position = Vector2(907.7788, 329.0535)
rotation = -0.1106817
scale = Vector2(0.1514312, 0.115809664)
texture = ExtResource("6_bxspu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Nodos/v9"]
position = Vector2(1148.9596, 299.01846)
shape = SubResource("CircleShape2D_cryqx")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Button" type="Button" parent="CanvasLayer"]
offset_left = 903.0
offset_top = 549.0
offset_right = 954.0
offset_bottom = 583.0
text = "listo"
metadata/_edit_use_anchors_ = true

[node name="BlueRectangle" type="Sprite2D" parent="CanvasLayer"]
visible = false
position = Vector2(129.00002, 342.00003)
scale = Vector2(0.42096218, 2.2770782)
texture = ExtResource("11_vtirg")

[node name="1" type="Button" parent="CanvasLayer"]
visible = false
offset_left = 50.0
offset_top = 103.0
offset_right = 209.0
offset_bottom = 253.0
text = "
"
icon = ExtResource("12_yda7b")

[node name="path" type="Button" parent="CanvasLayer"]
visible = false
offset_left = 47.0
offset_top = 268.0
offset_right = 210.0
offset_bottom = 418.0
icon = ExtResource("13_pvjda")

[node name="hero" type="Button" parent="CanvasLayer"]
visible = false
offset_left = 49.0
offset_top = 436.0
offset_right = 210.0
offset_bottom = 586.0
text = "

"
icon = ExtResource("14_e4ee7")

[node name="Temporal" type="Label" parent="CanvasLayer"]
offset_left = 10.0
offset_top = 17.0
offset_right = 70.0
offset_bottom = 40.0
text = "FLUJO : "

[node name="Maximo" type="Label" parent="CanvasLayer"]
offset_left = 8.0
offset_top = 47.0
offset_right = 135.0
offset_bottom = 70.0
text = "FLUJO M√ÅXIMO: "

[node name="Path" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 52.0
offset_top = 276.0
offset_right = 92.0
offset_bottom = 299.0
text = "Path"

[node name="Hero" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 50.0
offset_top = 437.0
offset_right = 90.0
offset_bottom = 460.0
text = "Hero"

[node name="Byte" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 53.0
offset_top = 106.0
offset_right = 95.0
offset_bottom = 129.0
text = "Byte"

[connection signal="body_entered" from="Aristas/Linea3" to="." method="_on_linea_3_body_entered"]
[connection signal="body_entered" from="Aristas/Linea3" to="Aristas/Linea3" method="_on_body_entered"]
[connection signal="body_exited" from="Aristas/Linea3" to="Aristas/Linea3" method="_on_body_exited"]
[connection signal="body_entered" from="Aristas/Linea4" to="." method="_on_linea_4_body_entered"]
[connection signal="body_entered" from="Aristas/Linea4" to="Aristas/Linea4" method="_on_body_entered"]
[connection signal="body_exited" from="Aristas/Linea4" to="Aristas/Linea4" method="_on_body_exited"]
[connection signal="body_entered" from="Nodos/v1" to="." method="_on_v_1_body_entered"]
[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/1" to="." method="_on__pressed"]
[connection signal="pressed" from="CanvasLayer/path" to="." method="_on_path_pressed"]
[connection signal="pressed" from="CanvasLayer/hero" to="." method="_on_hero_pressed"]
